# smart_web_scape

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 67dbe9434e07_initial_schema.py
backend/: config.py  main.py
backend/api/: dependencies.py  schemas.py
backend/api/routes/: auth.py  dashboard.py  history.py  schedules.py  scrape.py  urls.py  websocket.py
backend/core/: orchestrator.py  rate_limiter.py  url_classifier.py
backend/db/: models.py  session.py
backend/healing/: engine.py  fingerprint_rotator.py  selector_repair.py  structure_detector.py
backend/logger/: analytics.py  optimizer.py  visit_logger.py
backend/pipelines/: ai_pipeline.py  api_pipeline.py  base.py  http_pipeline.py  proxy_pipeline.py  registry.py  stealth_pipeline.py
backend/scheduler/: manager.py  tasks.py  worker.py
backend/utils/: circuit_breaker.py  crypto.py  notifier.py  proxy_pool.py  robots_checker.py  user_agents.py
docs/: api-spec.yaml  deployment.md
docs/impl/: github_history.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  NotificationSettings.tsx  ScheduleManager.tsx  SystemSettings.tsx  UrlDetail.tsx  UrlManager.tsx  VisitDetail.tsx  VisitHistory.tsx
nginx/: nginx.conf
tests/: conftest.py
tests/test_api/: test_auth.py  test_dashboard.py  test_urls.py  test_websocket.py
tests/test_healing/: test_fingerprint_rotator.py  test_selector_repair.py  test_structure_detector.py
tests/test_pipelines/: test_http_pipeline.py  test_orchestrator.py
